# 3d-bevy-template

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  rustfmt.toml
assets/levels/: my_level.glb  test_level.glb
assets_src/: my_level.blend  test_level.blend  testi.blend
docs/: CHARACTERS.md  blender-pipeline.md  mixamo-pipeline.md
game/: Cargo.toml
game/src/: main.rs
template_core/: Cargo.toml
template_core/src/: animation.rs  audio.rs  camera_rig.rs  controls.rs  dev_scene.rs  diagnostics.rs  levels.rs  lib.rs  menus.rs  nav.rs  npc_ai.rs  npcs.rs  player.rs  rts_camera.rs  saves.rs  settings.rs  squad.rs  states.rs
tools/audio/: make_placeholder_audio.py
tools/blender/: export_level.py  make_test_level.py
