[workspace]
resolver = "2"
members = ["game", "template_core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# "wav" on top of defaults: the placeholder sounds are script-generated WAVs
# (tools/audio/), which needs no audio encoder and carries no license.
bevy = { version = "0.19", features = ["wav"] }
avian3d = "0.7"
leafwing-input-manager = "0.21"
moonshine-save = "0.7"
# moonshine-save's filter types live here and aren't re-exported.
bevy_world_serialization = "0.19"
bevy_landmass = "0.12"
serde_json = "1"
# Settings file: already in the tree transitively (leafwing, moonshine-save).
serde = { version = "1", features = ["derive"] }
ron = "0.12"

[workspace.lints.clippy]
# ECS query signatures routinely trip this; aliasing them away hurts readability.
type_complexity = "allow"

# Fast iteration: light optimization for workspace code, full for dependencies
# (Bevy is unusably slow at opt-level 0, and deps rarely rebuild).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
