[package]
name = "template_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
leafwing-input-manager = { workspace = true }
moonshine-save = { workspace = true }
bevy_world_serialization = { workspace = true }
bevy_landmass = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
